--- a/index.html
+++ b/index.html
@@ -157,7 +157,90 @@
         </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
-        <section class="section sec5 contact" id="contact"></section> 
+        <section class="section sec5 contact" id="contact">
+            <div class="contact-container">
+                <div class="main-title">
+                    <h2>Contact <span>me</span></h2>
+                </div>
+                <div class="contact-content">
+                    <div class="left-contact">
+                        <h4>Contact me here</h4>
+                        <p>Some short description of one line, e.g. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of ...
+                        </p>
+                        <div class="contact-info">
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    Location
+                                </div>
+                                <p> : Istanbul, Turkey</p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-user-graduate"></i>
+                                    Education
+                                </div>
+                                <p> : Education</p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-envelope"></i>
+                                    Email
+                                </div>
+                                <p> : someeamil@email.com</p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-phone"></i>
+                                    Phone
+                                </div>
+                                <p> : 123456789</p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-language"></i>
+                                    Languages
+                                </div>
+                                <p> : English, Turkish</p>
+                            </div>
+                        </div>
+                        <div class="contact-icons">
+                            <div class="contact-icon">
+                                <a href="#" target="_blank">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="#" target="_blank">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="#" target="_blank">
+                                    <i class="fab fa-youtube"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right-contact">
+                        <form action="" class="contact-form">
+                            <div class="input-control input-control-multi">
+                                <input type="text" required placeholder="Your Name">
+                                <input type="email" required placeholder="Your Email">
+                            </div>
+                            <div class="input-control">
+                                <input type="text" required placeholder="Subject">
+                            </div>
+                            <div class="input-control">
+                                <textarea name="" id="" cols="15" rows="8" placeholder="Your message ..."></textarea>
+                            </div>
+                            <div class="btn-submit">
+                                <a href="#" class="btn-main">
+                                    <span class="btn-text">Submit</span>
+                                    <span class="btn-icon"><i class="fas fa-arrow-circle-right"></i></span>
+                                </a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section> 
     </main>
     
     <div class="controls">
@@ -167,15 +250,19 @@
         <div class="control control-2" data-id="about">
             <i class="fas fa-user"></i>
         </div>
-        <div class="control control-3" data-id="portfolio">
+        <!-- <div class="control control-3" data-id="portfolio">
             <i class="fas fa-briefcase"></i>
         </div>
         <div class="control control-4" data-id="blogs">
             <i class="fas fa-newspaper"></i>
-        </div>
+        </div> -->
         <div class="control control-5" data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div>
+    </div>
+
+    <div class="btn-theme">
+        <i class="fas fa-adjust"></i>
     </div>
 
     <script type="text/javascript" src="app.js"></script>
