--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                     </div>
             </div>
             <div class="right-header">
+                <div class="logo">
+                    <img src="img/logo.jpg" alt="Main">
+                </div>
                 <h1 class="name">Hi, I'm <span class="name">Alex.</span>
                     An English Language Specialist.
                 </h1>
